# aws-robomaker-sample-application-persondetection

./: .travis.yml  CONTRIBUTING.md  README.md  github_deploy.pem.enc  roboMakerSettings.json
robot_ws/: .rosinstall
robot_ws/src/person_detection_robot/: CMakeLists.txt  cloudformation_template.yaml  package.xml  setup.cfg  setup.py
robot_ws/src/person_detection_robot/config/: cloudwatch_logs_config.yaml  cloudwatch_metrics_config.yaml  h264_encoder_config.yaml  health_metrics_config.yaml  kvs_config.yaml
robot_ws/src/person_detection_robot/launch/: deploy_person_detection.launch  deploy_person_detection.launch.py  kinesis.launch  kinesis.launch.py  monitoring.launch  monitoring.launch.py  person_detection.launch  person_detection.launch.py
robot_ws/src/person_detection_robot/nodes/: rekognize  rekognize_tts  rotate
robot_ws/src/person_detection_robot/src/person_detection_robot/: rekognize.py  rekognize_tts.py  rotate.py
simulation_ws/: .rosinstall
simulation_ws/src/aws_robomaker_simulation_common/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
simulation_ws/src/aws_robomaker_simulation_common/nodes/: route_manager
simulation_ws/src/aws_robomaker_simulation_common/src/aws_robomaker_simulation_common/: route_manager.py
simulation_ws/src/aws_robomaker_simulation_common/worlds/: empty.world
simulation_ws/src/aws_robomaker_simulation_small_house/: CMakeLists.txt  README.md  package.xml
simulation_ws/src/aws_robomaker_simulation_small_house/launch/: small_house.launch  small_house_turtlebot_navigation.launch  small_house_turtlebot_slam.launch  view_small_house.launch
simulation_ws/src/person_detection_simulation/: CMakeLists.txt  package.xml
simulation_ws/src/person_detection_simulation/config/: cloudwatch_logs_config.yaml  cloudwatch_metrics_config.yaml  h264_encoder_config.yaml  kvs_config.yaml
simulation_ws/src/person_detection_simulation/launch/: empty_world.launch.py  kinesis.launch.py  monitoring.launch.py  route_manager.launch.py  small_house.launch  small_house.launch.py  small_house_turtlebot_navigation.launch  small_house_turtlebot_navigation.launch.py  turtlebot3_navigation.launch.py  view_empty_world.launch.py
simulation_ws/src/person_detection_simulation/param/: burger.yaml  waffle.yaml  waffle_pi.yaml
simulation_ws/src/person_detection_simulation/routes/: route.yaml
simulation_ws/src/turtlebot3_description_reduced_mesh/: CMakeLists.txt  package.xml
simulation_ws/src/turtlebot3_description_reduced_mesh/launch/: spawn_turtlebot.launch.py
