<?xml version="1.0"?>
<package format="3">
  <name>person_detection_robot</name>
  <version>1.1.0</version>
  <description>
  AWS RoboMaker robot application demonstrating ROS intergration for AWS Rekognition and AWS Polly.
  </description>
  <license>MIT</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cloudwatch_logger</depend>
  <depend>cloudwatch_metrics_collector</depend>
  <depend>kinesis_manager</depend>
  <depend>kinesis_video_streamer</depend>
  <depend>kinesis_video_msgs</depend>
  <depend>h264_encoder_core</depend>
  <depend>h264_video_encoder</depend>
  <depend>health_metric_collector</depend>
  <depend>tts</depend>
  <depend>tts_interfaces</depend>

  <depend>turtlebot3</depend>
  <depend>turtlebot3_msgs</depend>
  
  <exec_depend>turtlebot3_bringup</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
