<?xml version="1.0"?>
<package format="2">
  <name>aws_robomaker_simulation_common</name>
  <version>1.0.0</version>
  <description>
    AWS RoboMaker simulation package for commonly used nodes and helpers.
  </description>
  <license>Apache 2.0</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <!-- Route Manager -->
  <exec_depend>moveit_ros</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
