<?xml version="1.0"?>
<package format="3">
  <name>aws_robomaker_simulation_common</name>
  <version>1.0.0</version>
  <description>
    AWS RoboMaker simulation package for commonly used nodes and helpers.
  </description>
  <license>Apache 2.0</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <depend>rclpy</depend>
  <depend>python3-yaml</depend>

  <export>
    <build_type>ament_python</build_type>  
  </export>
</package>
